Removed BEM namingConvention from .stylintrc

--- a/.stylintrc
+++ b/.stylintrc
@@ -18,8 +18,8 @@
   "maxErrors": false,
   "maxWarnings": false,
   "mixed": true,
-  "namingConvention": "BEM",
-  "namingConventionStrict": true,
+  "namingConvention": false,
+  "namingConventionStrict": false,
   "none": "always",
   "noImportant": true,
   "parenSpace": "never",
