--- a/.editorconfig
+++ b/.editorconfig
@@ -2,7 +2,6 @@ root = true
 
 [*]
 
-indent_size = 2
 indent_style = space
 
 trim_trailing_whitespace = true
@@ -12,3 +11,9 @@ end_of_line = lf
 charset = utf-8
 
 insert_final_newline = true
+
+[*.js]
+indent_size = 2
+
+[*.{jade,styl}]
+indent_size = 4
