--- a/.stylintrc
+++ b/.stylintrc
@@ -13,7 +13,7 @@
   "efficient": "always",
   "extendPref": false,
   "globalDupe": false,
-  "indentPref": 2,
+  "indentPref": 4,
   "leadingZero": "never",
   "maxErrors": false,
   "maxWarnings": false,
@@ -29,7 +29,7 @@
   "semicolons": false,
   "sortOrder": "alphabetical",
   "stackedProperties": "never",
-  "trailingWhitespace": "never",
+  "trailingWhitespace": "always",
   "universal": false,
   "valid": true,
   "zeroUnits": "never",
