--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "babel-eslint": "^4.1.6",
     "babel-preset-es2015": "^6.3.13",
+    "babel-runtime": "^6.3.13",
     "babelify": "^6.3.0",
     "browser-sync": "^2.9.11",
     "browserify": "^11.2.0",
@@ -23,6 +24,12 @@
     "gulp-stylint": "^3.0.0",
     "gulp-stylus": "^2.1.0",
     "gulp-ttf2woff2": "^2.0.0",
+    "jasmine": "^2.4.1",
+    "jasmine-core": "^2.4.1",
+    "karma-browserify": "^4.4.2",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-firefox-launcher": "^0.1.7",
+    "karma-jasmine": "^0.3.6",
     "stylint": "^1.3.2",
     "vinyl-source-stream": "^1.1.0"
   }
