--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "karma-jasmine": "^0.3.6",
     "stylint": "^1.3.2",
     "vinyl-source-stream": "^1.1.0"
+  },
+  "dependencies": {
+    "gl-matrix": "^2.3.1"
   }
 }
