--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "karma-chrome-launcher": "^0.2.2",
     "karma-firefox-launcher": "^0.1.7",
     "karma-jasmine": "^0.3.6",
+    "proxy-middleware": "^0.15.0",
     "stylint": "^1.3.2",
     "vinyl-source-stream": "^1.1.0"
   },
