autoprefixer added, styles tested and fixed in firefox

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "browserify": "^11.2.0",
     "eslint": "^1.9.0",
     "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.1.0",
     "gulp-eslint": "^1.1.0",
     "gulp-jade": "^1.1.0",
     "gulp-load-plugins": "^1.0.0",
