--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "gulp-eslint": "^1.1.0",
     "gulp-jade": "^1.1.0",
     "gulp-load-plugins": "^1.0.0",
+    "gulp-pleeease": "^2.0.2",
     "gulp-stylint": "^3.0.0",
     "gulp-stylus": "^2.1.0",
+    "gulp-ttf2woff": "^1.1.0",
     "gulp-ttf2woff2": "^2.0.0",
     "http-proxy": "^1.13.1",
     "jasmine": "^2.4.1",
