--- a/.editorconfig
+++ b/.editorconfig
@@ -2,18 +2,17 @@ root = true
 
 [*]
 
-indent_style = space
-
-trim_trailing_whitespace = true
+charset = utf-8
 
 end_of_line = lf
 
-charset = utf-8
-
 insert_final_newline = true
+trim_trailing_whitespace = true
+
+indent_style = space
 
 [*.js]
 indent_size = 2
 
-[*.{jade,styl}]
+[*.{pug,styl}]
 indent_size = 4
