--- a/package.json
+++ b/package.json
@@ -1,44 +1,49 @@
 {
   "name": "spaceweather-client",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Space weather visualization website",
   "main": "index.js",
   "scripts": {
-    "start": "./node_modules/.bin/gulp",
-    "test": "./node_modules/.bin/karma start"
+    "start": "gulp",
+    "test": "karma start"
   },
   "author": "ROJO 2 <hola@rojo2.com>",
   "license": "ISC",
   "devDependencies": {
-    "babel-eslint": "^4.1.6",
-    "babel-preset-es2015": "^6.3.13",
+    "babel-eslint": "^6.1.2",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
     "babel-runtime": "^6.3.13",
-    "babelify": "^6.3.0",
-    "browser-sync": "^2.9.11",
-    "browserify": "^11.2.0",
-    "eslint": "^1.9.0",
-    "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-eslint": "^1.1.0",
-    "gulp-jade": "^1.1.0",
-    "gulp-load-plugins": "^1.0.0",
+    "babelify": "^7.3.0",
+    "browser-sync": "^2.16.0",
+    "browserify": "^13.1.0",
+    "connect-history-api-fallback": "^1.3.0",
+    "eslint": "^3.6.0",
+    "gl-matrix": "^2.3.2",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-eslint": "^3.0.1",
+    "gulp-load-plugins": "^1.3.0",
+    "gulp-pug": "^3.0.4",
     "gulp-stylint": "^3.0.0",
-    "gulp-stylus": "^2.1.0",
+    "gulp-stylus": "^2.5.0",
     "gulp-ttf2woff": "^1.1.0",
-    "http-proxy": "^1.13.1",
-    "jasmine": "^2.4.1",
-    "jasmine-core": "^2.4.1",
-    "karma-browserify": "^4.4.2",
-    "karma-chrome-launcher": "^0.2.2",
-    "karma-firefox-launcher": "^0.1.7",
-    "karma-jasmine": "^0.3.6",
-    "proxy-middleware": "^0.15.0",
-    "stylint": "^1.3.2",
+    "jasmine": "^2.5.2",
+    "jasmine-core": "^2.5.2",
+    "karma-browserify": "^5.1.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-jasmine": "^1.0.2",
+    "stylint": "^1.5.6",
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
-    "d3": "^3.5.11",
+    "classnames": "^2.2.5",
+    "d3": "^4.2.6",
     "gl-matrix": "^2.3.1",
-    "query-string": "^3.0.0"
+    "query-string": "^4.2.3",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
+    "react-router": "^2.8.1"
   }
 }
