--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "spaceweather-client",
   "version": "1.0.0",
   "description": "Space weather visualization website",
-  "main": "index.js",
+  "main": "dist/index.html",
   "scripts": {
     "start": "gulp",
     "test": "karma start"
@@ -10,22 +10,22 @@
   "author": "ROJO 2 <hola@rojo2.com>",
   "license": "ISC",
   "devDependencies": {
-    "babel-eslint": "^6.1.2",
+    "babel-eslint": "^7.0.0",
+    "babel-plugin-inferno": "^1.0.0-legacy",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
-    "babel-runtime": "^6.3.13",
+    "babel-runtime": "^6.11.6",
     "babelify": "^7.3.0",
     "browser-sync": "^2.16.0",
     "browserify": "^13.1.0",
     "connect-history-api-fallback": "^1.3.0",
     "eslint": "^3.6.0",
-    "gl-matrix": "^2.3.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-eslint": "^3.0.1",
     "gulp-load-plugins": "^1.3.0",
     "gulp-pug": "^3.0.4",
-    "gulp-stylint": "^3.0.0",
+    "gulp-stylint": "^4.0.0",
     "gulp-stylus": "^2.5.0",
     "gulp-ttf2woff": "^1.1.0",
     "jasmine": "^2.5.2",
@@ -39,8 +39,12 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
-    "d3": "^4.2.6",
-    "gl-matrix": "^2.3.1",
+    "d3": "^4.2.8",
+    "gl-matrix": "^2.3.2",
+    "inferno": "^0.7.27",
+    "inferno-component": "^0.7.27",
+    "inferno-dom": "^0.7.27",
+    "inferno-router": "^0.7.27",
     "query-string": "^4.2.3",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
