Fix eslint missing mocha and chai env

--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,8 @@
   "env": {
     "es6": true,
     "node": true,
+    "mocha": true,
+    "chai": true,
     "browser": true
   },
   "parser": "babel-eslint",
