--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,11 @@
 {
-    "presets": ["es2015", "react"],
+    "presets": ["@babel/preset-env", "@babel/preset-react"],
+    "plugins": [
+        ["babel-plugin-root-import", {
+            "rootPathSuffix": "./src/app/icarus",
+            "rootPathPrefix": "@/"
+        }]
+    ],
 	"env": {
 		"test": {
 
