--- a/.eslintrc
+++ b/.eslintrc
@@ -1,14 +1,15 @@
 {
   "rules": {
     "indent": [2,2],
-    "quotes": [2,"double"],
+    "quotes": [2,"single"],
     "linebreak-style": [2,"unix"],
-    "semi": [2,"always"],
+    "semi": [2,"never"],
     "no-console": 0,
     "no-unused-vars": 0,
     "no-var": 2,
     "no-trailing-spaces": 1,
-    "no-nested-ternary": 1
+    "no-nested-ternary": 1,
+    "no-inner-declarations": 0
   },
   "env": {
     "es6": true,
