--- a/package.json
+++ b/package.json
@@ -6,40 +6,54 @@
   "scripts": {
     "start": "NODE_ENV=development gulp",
     "build": "NODE_ENV=production gulp build",
-    "test": "NODE_ENV=test karma start"
+    "test": "NODE_ENV=test mocha --require @babel/register --require test/setup.js --recursive 'test/**/*.js'"
   },
   "author": "ROJO 2 <hola@rojo2.com>",
   "license": "MIT",
   "devDependencies": {
+    "@babel/cli": "^7.11.6",
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
+    "@babel/register": "^7.11.5",
     "babel-eslint": "^7.0.0",
     "babel-plugin-inferno": "^1.0.0-legacy",
+    "babel-plugin-root-import": "^6.5.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "babel-runtime": "^6.11.6",
     "babelify": "^7.3.0",
-    "browser-sync": "^2.26.7",
+    "browser-sync": "^2.26.12",
     "browserify": "^13.1.0",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "connect-history-api-fallback": "^1.3.0",
     "eslint": "^3.6.0",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.1",
-    "gulp-eslint": "^3.0.1",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-eslint": "^6.0.0",
     "gulp-load-plugins": "^1.6.0",
-    "gulp-pug": "^3.0.4",
+    "gulp-pug": "^4.0.1",
     "gulp-stylint": "^4.0.0",
     "gulp-stylus": "^2.5.0",
     "gulp-ttf2woff": "^1.1.0",
     "jasmine": "^2.5.2",
     "jasmine-core": "^2.5.2",
+    "jest": "^26.4.2",
     "karma-browserify": "^5.1.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-firefox-launcher": "^1.3.0",
     "karma-jasmine": "^1.0.2",
-    "stylint": "^1.5.6",
-    "uglifyify": "^3.0.4",
+    "mocha": "^8.1.3",
+    "parcel-bundler": "^1.12.4",
+    "prettier": "2.1.1",
+    "pug-cli": "^1.0.0-alpha6",
+    "stylint": "^2.0.0",
+    "uglifyify": "^5.0.2",
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "classnames": "^2.2.5",
     "d3": "^4.2.8",
     "gl-matrix": "^2.3.2",
